# mergeCT

./: .gitignore  CMakeLists.txt  main.cpp  mergeNcFiles.cpp  mergeNcFiles.h
inOut/: config.txt
